# manimator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  package.txt  packages.txt  pyproject.toml  requirements.txt
manimator/: .env.example  gradio_app.py  main.py
manimator/.gradio/cached_examples/15/: log.csv
manimator/api/: animation_generation.py  scene_description.py
manimator/few_shot/: few_shot_1_base64.txt  few_shot_prompts.py
manimator/utils/: helpers.py  prompts.py  schema.py
